# WisA

./: .codecarbon.config  .gitignore  carbon_emission.py  create_dataset.py  emissions.csv
cc-fix/: gpu.py
cpp/: .clang-format  CMakeLists.txt
cpp/cmake/: Boost.cmake  Compiler.cmake  pybind11.cmake
cpp/lib/pybindings/: Bindings.cpp  CMakeLists.txt  bindings.cpp
cpp/lib/sort/: CMakeLists.txt
cpp/lib/sort/include/sort/: Sort.hpp
cpp/lib/sort/src/: Sort.cpp
cpp/sort/: sorting_algorithms.pyd
cpp/src/: Sort.cpp
cpp/tests/: CMakeLists.txt  SortTests.cpp
data/: Names_2010Census_shuffled.csv  floats.csv  ints.csv  strings.csv
py/: sort.py  test.py
py/data/: create_dataset.py  data_preprocessing.py  plot_execution_time.py  plot_results.py
py/sort/: sort.py  test.py
results/: sorting_info.csv  sorting_info_linux_one_million.csv  sorting_info_linux_ten_million.csv
scripts/: linux_setup.sh
